# MyOwnLLM

./: ARCHITECTURE.md  CLOUD_MESH_PHASE_2.md  DOCS.md  Justfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap.ps1
src/: config.ts  conversations.ts  mesh-capabilities.ts  mesh-client.svelte.ts  mesh-protocol.ts  mesh-scheduler-worker.ts  mesh-state.svelte.ts  mesh.ts  settings-attention.svelte.ts  types.ts  update-state.svelte.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/mesh/: commands.rs  identity.rs  mod.rs  roster.rs  signing.rs
src/ui/: App.svelte  Chat.svelte  ModeBar.svelte  SettingsPanel.svelte  Sidebar.svelte  TranscribeView.svelte  settings-route.svelte.ts
src/ui/settings/: AddNetworkModal.svelte  CloudMeshActivity.svelte  CloudMeshAddresses.svelte  CloudMeshConnections.svelte  CloudMeshIdentity.svelte  CloudMeshNetwork.svelte  CloudMeshSection.svelte  CloudMeshStatus.svelte
