[package]
name = "myownllm"
version = "0.2.14"
description = "MyOwnLLM — detect hardware, pick best local model, start it."
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "myownllm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "5"
which = "6"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
futures-util = "0.3"
bytes = "1"
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Cloud Mesh identity layer. Each instance generates a long-lived
# ed25519 keypair on first use of the mesh feature, stored under
# `~/.myownllm/.secrets/identity.json`. The public key is encoded as
# base32-lowercase (RFC 4648) and surfaced as the Device ID; Network IDs
# use the same encoding for 256-bit shared rendezvous handles. The
# `rand_core/getrandom` feature pulls OS randomness for keypair and
# Network ID generation. Wire protocol / signaling / WebRTC live in
# follow-up PRs; this dep set covers identity + the anchor file only.
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2"

# Local transcription stack. ASR + diarization run as ONNX models via
# the `ort` crate (onnxruntime). Loading is `load-dynamic` so the
# onnxruntime dylib is resolved at runtime rather than statically
# linked — keeps the build matrix simple, avoids ~100 MB of static-link
# bloat per platform, and lets users disable ML features by removing
# the runtime file. The dylib itself is delivered by `scripts/install.sh`
# / `scripts/install.ps1` at install time, with an in-process first-run
# fallback in `src/ort_install.rs` that downloads into
# `~/.myownllm/runtime/` for users who installed via the Tauri
# `.msi`/`.dmg`/`.deb` bundles directly.
#
# cpal handles cross-platform audio capture (CoreAudio / WASAPI / ALSA on
# macOS / Windows / Linux). All audio + ASR + diarization work runs
# in-process; nothing is sent over the network at runtime.
#
# Per-tier model selection lives in `manifests/default.json`:
#   - Pi 5 / low-end:                 Moonshine Small (English, 123 MB).
#   - 16+ GB Apple Silicon, x86:      Parakeet TDT 0.6B v3 (25 langs).
#   - Diarization on all tiers:       pyannote-segmentation-3.0 + a
#                                     speaker embedder + online clustering.
cpal = "0.15"
crossbeam-channel = "0.5"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "ndarray", "api-22"] }
# Pinned to 0.17 to match what ort 2.0.0-rc.12 depends on. Mixing
# 0.16 and 0.17 compiles them as distinct types so trait impls (like
# OwnedTensorArrayData) don't line up between our arrays and ort's
# tensor constructors — the failure mode is a confusing "trait not
# satisfied" error that suggests the same type as the one you have.
ndarray = "0.17"
# HuggingFace `tokenizers` for Moonshine's BPE tokenizer (ships a
# tokenizer.json). The `unstable_wasm` feature name is misleading — what
# it actually does is swap Oniguruma (a C regex library that needs cmake
# + perl on Windows and has periodic Windows build flakes) for
# `fancy-regex`, a pure-Rust regex engine that works everywhere. Despite
# the feature name, it's safe on native targets too; the `getrandom/js`
# bit it pulls in is gated to wasm32 builds. Parakeet uses a simple
# SentencePiece-style `tokens.txt` we parse ourselves so it doesn't
# touch this.
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }
# Audio file decoding for the "Upload audio" flow. symphonia is pure Rust
# (no extra system deps) and handles wav / flac / mp3 / aac / ogg-vorbis /
# m4a out of the box — enough for the realistic set of files a user is
# likely to drop in.
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac", "mp3", "aac", "isomp4", "ogg", "vorbis"] }
# Real-input FFT for the diarize embedder's kaldi-compatible 80-dim
# fbank front-end. wespeaker-r34 and CAM++ both consume `[B, T, 80]`
# log-mel filterbank features rather than raw audio (the ONNX exports
# don't bake the spectrogram in despite past comments to the contrary);
# `realfft` is half the work of a generic complex FFT for our real
# 512-point frames and keeps the dep surface narrow.
realfft = "3"
# Archive extraction for the first-run onnxruntime fetcher (`ort_install`).
# Microsoft ships onnxruntime as `.tgz` for macOS/Linux and `.zip` for
# Windows, so we need both. `zip` is the only widely-used pure-Rust zip
# reader; `flate2` + `tar` are the standard pair for `.tar.gz`. All three
# are popular, audited crates with minimal transitive deps.
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
